hide context menu

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./element-ui/lib/theme-chalk/index.css"/>
   <script src="shortcut.js"></script>
 </head>
-<body style="overflow: hidden;" >
+<body style="overflow: hidden;" oncontextmenu="return false;" >
   <div id="app">
     <el-container direction="vertical">
       <el-header>
