--- a/static/index.html
+++ b/static/index.html
@@ -77,7 +77,7 @@
             <el-input v-model="form.Name" placeholder="server name"></el-input>
           </el-form-item>
           <el-form-item label="Endpoint" prop="Endpoint">
-            <el-input v-model="form.Endpoint" placeholder="start with wss:// or dtls://"></el-input>
+            <el-input v-model="form.Endpoint" placeholder="start with wss:// or h3s://"></el-input>
           </el-form-item>
           <el-form-item label="User" prop="User">
             <el-input v-model="form.User"></el-input>
