--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./element-ui/lib/theme-chalk/index.css"/>
 </head>
-<body style="overflow: hidden;" oncontextmenu="return false;" >
+<body style="overflow: hidden;" oncontextmenu="return true;" >
   <div id="app">
     <el-container direction="vertical">
       <el-header>
